# stm32-monorepo-test

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
firmware/project1/: .mxproject  CMakeLists.txt  Makefile  project1.ioc
firmware/project1/Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h  usart.h
firmware/project1/Core/Src/: freertos.c  gpio.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  syscalls.c  sysmem.c  usart.c
firmware/project1/CubeMX/: Makefile
firmware/project1/user/inc/: function.h
firmware/project1/user/src/: function.c
firmware/project2/: .mxproject  CMakeLists.txt  project2.ioc
firmware/project2/Core/Inc/: FreeRTOSConfig.h  gpio.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
firmware/project2/Core/Src/: freertos.c  gpio.c  main.c  syscalls.c  sysmem.c  system_stm32l4xx.c  usart.c
firmware/project2/CubeMX/: Makefile
firmware/project2/user/inc/: function.h
firmware/project2/user/src/: function.c
resources/Drivers/CMSIS/Core/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_version.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h
resources/Drivers/CMSIS/Core/Template/ARMv8-M/: main_s.c  tz_context.c
resources/Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/: type_abbrev.h
resources/Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/: system_ARMCM0.c  system_ARMCM23.c  system_ARMCM3.c  system_ARMCM33.c  system_ARMCM4.c  system_ARMCM7.c  system_ARMSC000.c  system_ARMSC300.c  system_ARMv8MBL.c  system_ARMv8MML.c  system_generic.c
resources/Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/: all_tests.c  main.c  math_helper.c
resources/Drivers/CMSIS/DSP/DSP_Lib_TestSuite/DspLibTest_FVP_A5/: main.c
resources/Drivers/CMSIS/DSP/DSP_Lib_TestSuite/DspLibTest_FVP_A5/RTE/: RTE_Components.h
resources/Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/inc/: ref.h
resources/Drivers/CMSIS/DSP/Examples/ARM/arm_class_marks_example/: arm_class_marks_example_f32.c
resources/Drivers/CMSIS/DSP/Examples/ARM/arm_convolution_example/: arm_convolution_example_f32.c
resources/Drivers/CMSIS/DSP/Examples/ARM/arm_dotproduct_example/: arm_dotproduct_example_f32.c
resources/Drivers/CMSIS/DSP/Examples/ARM/arm_fft_bin_example/: arm_fft_bin_data.c  arm_fft_bin_example_f32.c
resources/Drivers/CMSIS/DSP/Examples/ARM/arm_fir_example/: arm_fir_data.c  arm_fir_example_f32.c
resources/Drivers/CMSIS/DSP/Examples/ARM/arm_graphic_equalizer_example/: arm_graphic_equalizer_data.c  arm_graphic_equalizer_example_q31.c
resources/Drivers/CMSIS/DSP/Examples/ARM/arm_linear_interp_example/: arm_linear_interp_example_f32.c  math_helper.c
resources/Drivers/CMSIS/DSP/Examples/ARM/arm_matrix_example/: arm_matrix_example_f32.c
resources/Drivers/CMSIS/DSP/Examples/ARM/arm_signal_converge_example/: arm_signal_converge_data.c  arm_signal_converge_example_f32.c
resources/Drivers/CMSIS/DSP/Examples/ARM/arm_sin_cos_example/: arm_sin_cos_example_f32.c
resources/Drivers/CMSIS/DSP/Examples/ARM/arm_variance_example/: arm_variance_example_f32.c
resources/Drivers/CMSIS/DSP/Include/: arm_common_tables.h  arm_math.h
resources/Drivers/CMSIS/DSP/Source/BasicMathFunctions/: arm_abs_f32.c  arm_abs_q15.c  arm_abs_q31.c  arm_abs_q7.c  arm_add_f32.c  arm_add_q15.c  arm_add_q31.c  arm_add_q7.c  arm_dot_prod_f32.c  arm_dot_prod_q15.c  arm_dot_prod_q31.c  arm_dot_prod_q7.c  arm_mult_f32.c  arm_mult_q15.c  arm_mult_q31.c  arm_mult_q7.c  arm_negate_f32.c  arm_negate_q15.c  arm_negate_q31.c  arm_negate_q7.c  arm_offset_f32.c  arm_offset_q15.c  arm_offset_q31.c  arm_offset_q7.c  arm_scale_f32.c  arm_scale_q15.c  arm_scale_q31.c  arm_scale_q7.c  arm_shift_q15.c  arm_shift_q31.c  arm_shift_q7.c  arm_sub_f32.c  arm_sub_q15.c  arm_sub_q31.c  arm_sub_q7.c
resources/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_ll_utils.c
(+189 files in other folders)
